--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-helmet-async": "^2.0.1",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.10.1"
+    "sweetalert2": "^11.10.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
