gallery section added

--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "clsx": "^2.0.0",
     "firebase": "^10.6.0",
     "localforage": "^1.10.0",
+    "lodash.debounce": "^4.0.8",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.1",
