user admin dashboard setup

--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.7",
     "aos": "^2.3.4",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "firebase": "^10.6.0",
+    "jsonwebtoken": "^9.0.2",
     "localforage": "^1.10.0",
     "lodash.debounce": "^4.0.8",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.1",
+    "react-icons": "^4.12.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.20.0",
     "sort-by": "^1.2.0",
